inc/jzdrop/theme/css/front.css
/**
 * Front.php specific css styles.
 */
body {
    font-family: 'Trebuchet MS', Helvetica, Arial, sans-serif;
    position: relative;
}

.whoami {
  text-align: right;
  font-size: 4em;
  margin-top: 0;
  position: relative;
  top: -10px;
}

.whoami.decolored {
  color: #ffffff;
  text-shadow: 0px 0px 18px #888888;
}

.codes {
  position: relative;
}

.codes dd {
  margin-bottom: 1em;
  margin-left: 5em;
}

/*
.codes dd:before {
  content: "{/}";
  font-size: 3em;
  line-height: 1em;
  color: #dddddd;
  font-family: sans-serif;
  font-weight: bold;
  text-align: center;
  float: left;
  position: absolute;
  left: 0;
  letter-spacing: .25ex;
}

.codes dd:hover:before {
  content: "{/}";
  font-size: 3em;
  line-height: 1em;
  letter-spacing: .25ex;
  color: #bcbcbc;
  font-family: sans-serif;
  font-weight: bold;
  text-align: center;
  float: left;
  position: absolute;
  left: 0;
}
*/

.fork-this {
  text-align: right;
  display: block;
  font-style: italic;
  padding-top: .5ex;
  margin-top: .5ex;
  border-top: 1px dotted #cccccc;
}

.fork-this code {
  font-style: normal;
}

.sidebar .item-list {
    list-style-type: none;
    margin-top: 0;
    margin-bottom: 0;
    padding-left: 0;
}

.sidebar {
  border-top: 1px solid #bbbbbb;
  padding: 1ex;
  margin-top: 2ex;
  color: #bbbbbb;
  background-color: #ffffff;
  position: absolute;
  width: inherit;
  bottom: 0;
}

.sidebar * {
  background-color: #ffffff;
}

.sidebar a {
  color: #444444;
}

.sidebar a:hover {
  color: #7A63FF;
}

.sidebar li {
  float: left;
  display: inline;
  margin-left: .5em;
  padding-left: .5em;
  border-left: 1px solid #888888;
}

.sidebar li.first {
  border-left: 0;
}

.sidebar .elsewhere > * {
  float: left;
}

.sidebar #built-ci {
  float: right;
  margin-top: 0;
  margin-bottom: 0;
  font-style: italic;
}

.elsewhere {
  float: left;
}

